移除高版本新特性